ios overflow fix

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -4,7 +4,10 @@ body, #svg {
   -ms-overflow-style: none;   
   overflow: -moz-scrollbars-none;   
 }
-
+#wrapper {
+  overflow: hidden;
+  position: fixed;
+}
 body::-webkit-scrollbar, #svg::-webkit-scrollbar {
   display: none;
 }
